# tap-delighted

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: dependabot_auto_merge.yml  test.yml
tap_delighted/: client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
