[project]
name = "tap-delighted"
version = "0.1.0"
description = "`tap-delighted` is a Singer tap for Delighted, built with the Meltano Singer SDK."
authors = [{ name = "Tobias Cadee", email = "tobias.cadee@ticketswap.com" }]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Delighted",
]
dependencies = [
    "singer-sdk>=0.33,<0.47",
    "requests>=2.31,<2.33",
    "delighted>=4.1.0,<5",
    "pytz>=2024.1,<2026.0",
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]

[project.scripts]
tap-delighted = "tap_delighted.tap:TapDelighted.cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "singer-sdk[testing]>=0.33,<0.43",
]

[tool.hatch.build.targets.sdist]
include = ["tap_delighted"]

[tool.hatch.build.targets.wheel]
include = ["tap_delighted"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
lint.ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "DTZ005",  # timezone-utc
]
line-length = 120
lint.select = ["ALL"]
src = ["tap_delighted"]
target-version = "py37"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_delighted"]

[tool.ruff.lint.pydocstyle]
convention = "google"
